# reflow

./: .gitignore  .taskmasterconfig  README.md  cli_mcp_mapping_audit.md  component_test_results.json  coverage.json  debug_cli.py  pyproject.toml  requirements.txt  researchagent.config.json  test_ai_research.md  test_research_document.md  test_results.xml
.cursor/: mcp.json
.cursor/rules/: architecture.mdc  design_researcher_rules.mdc  dev_workflow.mdc  file_organization.mdc  glossary.mdc  ra-001-project-overview-and-standards.mdc  ra-002-python-backend-cli.mdc  ra-003-mcp-server-python-fastmcp.mdc  ra-004-api-interaction-backend-mcp.mdc  ra-005-configuration-management.mdc  ra-006-testing-standards-python.mdc  ra-007-meta-design-researcher-rules-guidance.mdc  self_improve.mdc  taskmaster.mdc  test_driven_development.mdc
analysis_reports/: test_analysis_20250603_204736.json  test_analysis_20250604_102540.json  test_analysis_20250604_115315.html  test_analysis_20250604_115315.json  test_analysis_20250604_130459.html  test_analysis_20250604_130459.json  test_analysis_20250604_133332.html  test_analysis_20250604_133332.json
config/backups/: test_config_test_20250604_125904.backup.json
config/defaults/: default_config.json
config/schema/: config_schema.json
docs/: Irregularities.md  code_index.md  codebase_improvement_plan.md  codebase_improvement_recommendations.md  improvement_strategy_summary.md  master_improvement_plan.md  prd_compliance_improvement_plan.md  prd_parity.md  testing_patterns_reference.md  testing_standards.md
projects/: context.json  projects.json
scripts/: README_component_runner.md  check_file_size.py  check_sizes_quick.py  component_runner.py  comprehensive_report_analysis_20250604_114908.json  comprehensive_report_analysis_20250604_125813.json  fix_suggestions_20250604_114338.json  fix_suggestions_20250604_115315.json  fix_suggestions_20250604_121755.json  fix_suggestions_20250604_122746.json  fix_suggestions_20250604_123704.json  fix_suggestions_20250604_124546.json  fix_suggestions_20250604_130459.json  fix_suggestions_20250604_135233.json  fix_suggestions_20250604_135541.json  fix_suggestions_20250604_142248.json  fix_suggestions_20250604_143428.json  fix_suggestions_20250604_145229.json  prd.txt  priority_matrix.py  session_summary_analysis_20250604_114908.json  session_summary_analysis_20250604_125813.json  suggestion_engine.py  task-complexity-report.json  task34_completion_summary.md  test_analysis_framework.py  test_analysis_results.json  test_analyzer.py  test_dashboard.py  test_error_handling.py  test_priority_analysis.json  test_runner.py
scripts/analysis_results/current_status/: test_analysis_20250604_140003.json
scripts/analysis_results/post_config_has_method_fix/: test_analysis_20250604_145206.json
scripts/analysis_results/post_missing_method_fix/: test_analysis_20250604_143420.json
scripts/analysis_results/post_mock_fixes_status/: test_analysis_20250604_142240.json
scripts/analysis_results/post_performance_fix/: test_analysis_20250604_143943.json
scripts/testing/: coverage_check.py  run_tdd_cycle.py  watch_tests.py
src/: __init__.py
src/mcp_server/: __init__.py  protocol_spec.md  server.py
src/mcp_server/communication/: __init__.py  message_processor.py  stdio_handler.py
src/mcp_server/feedback/: __init__.py  async_progress_reporter.py  contextual_feedback_system.py  feedback_configuration.py  interactive_feedback_flows.py  progress_event_system.py  progress_integration.py  protocol_compliance.py  status_update_protocol.py
src/mcp_server/middleware/: __init__.py  error_middleware.py
src/mcp_server/protocol/: __init__.py  enhanced_error_handler.py  error_handler.py  message_handler.py  production_exceptions.py  response_formatter.py
src/mcp_server/tests/: test_error_handler.py  test_mcp_tools.py  test_model_management_tools.py  test_parameter_validation.py  test_production_error_handling.py  test_protocol_compliance.py  test_response_formatting.py  test_stdio_communication.py  test_structured_feedback.py
src/research_agent_backend/: __init__.py
tests/: test_core_research_agent.py
(+251 files in other folders)
